objects/FilteredListParam__mdt.object
<CustomObject>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterDefaultValue__c</fullName>
        <label>Filter Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterLabel__c</fullName>
        <label>Filter Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterOperation__c</fullName>
        <label>Filter Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                    <default>true</default>
                    <label>equals</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FilteredListConfiguration__c</fullName>
        <label>Filtered List Configuration</label>
        <referenceTo>FilteredListConfiguration__mdt</referenceTo>
        <relationshipLabel>Filtered List Params</relationshipLabel>
        <relationshipName>Filtered_List_Params</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IsEnableb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enableb</label>
        <type>Checkbox</type>
    </fields>
    <description>A configuration filter for a filter list column (right block in main list).</description>
    <label>Filtered List Param</label>
    <pluralLabel>Filtered List Params</pluralLabel>
</CustomObject>